# whether

./: .gitignore  README.md  pyproject.toml
examples/: sample_output.md  uncertainty_demo.py
weathernarrate/: __init__.py  charts.py  cli.py  extract.py  forecast.py  geocode.py  narrate.py  prompts.py  timefmt.py  uncertainty.py
whether/: __init__.py  charts.py  cli.py  forecast.py  geocode.py  narrate.py  prompts.py  uncertainty.py  units.py
